# Playwright

./: .dockerignore  .env.example  .gitignore  .plan  Dockerfile  LICENSE  README.md  agent.py  agent_legacy.py  app.py  content_gen.py  curator.py  db.py  debug_felo.py  debug_felo2.py  debug_felo3.py  docker-compose.yml  explorer.py  mcp_server.py  page_annotator.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_benchmark.py  site_understanding.py  skyvern_demo.py  template_loader.py  test_agent.py  utils.py
agent/: __init__.py  a11y_tree.py  action_registry.py  browser_pool.py  chrome_detector.py  circuit_breaker.py  core.py  cost_tracker.py  error_recovery.py  llm_helpers.py  loop_detector.py  memory.py  model_router.py  page_utils.py  plan_manager.py  recorder.py  recording_converter.py  runner.py  stealth.py  task_pool.py  tools.py  trace.py  visual_verify.py  watchdog.py
benchmarks/: benchmark_20260318_190421_85b780a.json  benchmark_20260318_191941_85b780a.json  benchmark_20260318_202136_9f4428f.json  benchmark_20260318_205844_9f4428f.json  latest.json
custom_actions/: __init__.py  examples.py
data/: tasks.db
docs/: browser-use 调研文档.md  lightpanda-调研文档.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
static/: index.html
tests/: conftest.py  test_a11y_tree.py  test_action_registry.py  test_agent_robustness.py  test_app.py  test_app_endpoints.py  test_benchmark.py  test_browser_pool.py  test_circuit_breaker.py  test_content_gen.py  test_cost_tracker.py  test_curator.py  test_db.py  (+29 more)
(+116 files in other folders)
